# cgl

./: .gitignore  .gitmodules  CMakeLists.txt
Include/: CMakeLists.txt
Include/Base/: Macros.h  TypeTraits-inl.h  TypeTraits.h
Include/Container/: ArrayRef-inl.h  ArrayRef.h  StringRef.h
Include/Stream/: BaseStream.h
Include/String/: Convert.h  StringRef.h
Test/: CMakeLists.txt
Test/Base/: MacrosTest.cpp  TypeTraitsTest.cpp
Test/Container/: ArrayRefTest.cpp
